[package]
name = "scoped-arena"
version = "0.3.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/scoped-arena"
homepage = "https://github.com/zakarumych/scoped-arena"
repository = "https://github.com/zakarumych/scoped-arena"
readme = "README.md"
description = "Arena allocator with optional scopes"
categories = ["memory-management", "rust-patterns", "no-std"]
keywords = ["allocator", "alloc", "arena", "no-std"]

[features]
allocator_api = []
alloc = []
default = ["alloc"]
